# arbx

./: .env.example  .gitignore  .gitleaks.toml  .rustfmt.toml  Cargo.toml  README.md  SECURITY.md  arbx_pnl_state.json  deny.toml  proptest.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  security.yml
benches/: hot_paths.rs
config/: anvil_fork.toml  default.toml  mainnet.toml  sepolia.toml
contracts/: README.md  foundry.toml
contracts/deployments/: 421614.json
contracts/script/: Deploy.s.sol  Verify.s.sol
contracts/src/: ArbExecutor.sol
contracts/test/: ArbExecutor.t.sol  ArbExecutorFuzz.t.sol
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  metrics.rs  pnl.rs  tracing_init.rs  types.rs
crates/detector/: Cargo.toml
crates/detector/src/: graph.rs  lib.rs  opportunity.rs  profit.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  submitter.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: block_poller.rs  lib.rs  pool_seeder.rs  pool_state.rs  reconciler.rs  sequencer_feed.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  revm_sim.rs
doc/: help.html  settings.html  src-files.js
doc/check/: all.html  index.html
doc/search.index/: root.js
doc/src/check/: check_alloy_api.rs.html
docs/: ANVIL_FORK_VALIDATION.md  ARCHITECTURE.md  CONTRIBUTING.md  MAINNET_LAUNCH.md  MEV_PRIMER.md  ROADMAP.md  SSOT.md  TESTNET_VALIDATION.md
scripts/: anvil_smoke_test.sh  deploy-mainnet.sh  deploy-sepolia.sh  flamegraph.sh  install-hooks.sh  pnl_report.sh  pre-commit  run-mainnet.sh  run_anvil_fork.sh  run_sepolia.sh  smoke_test.sh
tests/chaos/: mod.rs
tests/integration/: helpers.rs  mod.rs  testnet_validation.rs
tests/property/: mod.rs
