[package]
name    = "arbx-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
alloy              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus         = { workspace = true }
tokio              = { workspace = true }   # for Metrics::start_server (async TCP listener)

[dev-dependencies]
proptest    = { workspace = true }
tempfile    = "3"
