[package]
name    = "arbx-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arbx-common = { workspace = true }
tokio        = { workspace = true }
alloy        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }

[dev-dependencies]
tokio   = { workspace = true }
mockall = { workspace = true }
