[package]
name    = "arbx-simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arbx-common = { workspace = true }
revm         = { workspace = true }
alloy        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }
